--- a/New QUiz/package.json
+++ b/New QUiz/package.json
@@ -1,16 +1,19 @@
 {
   "name": "brand-archetype-quiz",
   "version": "1.0.0",
+  "private": true,
   "description": "AI-powered brand archetype quiz funnel for e-commerce brands",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "client": "cd client && npm run dev",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "cd client && npm run dev",
     "install-client": "cd client && npm install",
     "build-client": "cd client && npm run build",
-    "heroku-postbuild": "npm run install-client && npm run build-client"
+    "heroku-postbuild": "npm run install-client && npm run build-client",
+    "build": "cd client && npm install && npm run build",
+    "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   },
   "keywords": [
     "brand",
@@ -31,7 +34,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "@netlify/functions": "^2.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
