--- a/New QUiz/netlify.toml
+++ b/New QUiz/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  base = "."
-  command = "cd client && npm install && cd ../server && npm install && cd ../client && npm run build"
+  base = "New QUiz"
+  command = "npm install && npm run build"
   publish = "client/dist"
 
 [functions]
