--- a/New QUiz/package.json
+++ b/New QUiz/package.json
@@ -9,10 +9,8 @@
     "server": "nodemon server/server.js",
     "client": "cd client && npm run dev",
     "dev": "cd client && npm run dev",
-    "install-client": "cd client && npm install",
-    "build-client": "cd client && npm run build",
-    "heroku-postbuild": "npm run install-client && npm run build-client",
-    "build": "cd client && npm install && npm run build",
+    "prebuild": "cd client && npm install && cd ../server && npm install",
+    "build": "cd client && npm run build",
     "install-all": "npm install && cd client && npm install && cd ../server && npm install"
   },
   "keywords": [
@@ -26,16 +24,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "openai": "^4.20.1",
-    "@netlify/functions": "^2.0.0"
+    "@netlify/functions": "^2.0.0",
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
